# cheat-at-search-october-cohort

./: .gitignore  AGENTS.md  README.md  marimo.toml  pyproject.toml
notebooks/: 0_AI_Introduction_to_Lexical_and_BM25_tokenization.py  0_Cheat_at_Search_with_LLMs_Analyze_BM25.py  1_AI_Introduction_to_Lexical_and_BM25_query_tokenization.py  2_AI_Introduction_to_Lexical_and_BM25_TFIDF_scoring.py  2_Cheat_at_Search_with_LLMs_Query_Categories.py  2a_Cheat_at_Search_with_LLMs_Query_Categories_No_Category_Found.py  2b_Cheat_at_Search_with_LLMs_Perfect_Categorization.py  2c_Cheat_at_Search_with_LLMs_Query_Categories_Fully_Qualified.py  2d_cheat_at_search_with_llms_query_categories_list_of_categories.py  2e_Cheat_at_Search_with_LLMs_Query_Categories_Examples.py  2f_Cheat_at_Search_with_LLMs_Query_Categories_Fully_Qualified_Hallucinated.py  2g_Query_to_Query_Similarity.py  3_AI_Introduction_to_Lexical_and_BM25_Searching_multiple_fields.py  4_AI_Introduction_to_Lexical_and_BM25_Is_there_a_better_TFIDF_.py  5_AI_Introduction_to_Lexical_and_BM25_BM25F_step_by_step.py  README.md  analyze_bm25.py  full_qualified.py  query_tokenization.py  search_array_guide.py  synonyms_from_llms.py  tokenization.py
notebooks/homework/: 1a_Cheat_at_Search_with_LLMs_Spelling_Corrections_from_LLMs.py  3_Cheat_at_Search_with_LLMs_Item_Type_Homework.py
notebooks/jupyter/: 0_AI_Introduction_to_Lexical_and_BM25_tokenization.ipynb  0_Cheat_at_Search_with_LLMs_Analyze_BM25.ipynb  1_AI_Introduction_to_Lexical_and_BM25_query_tokenization.ipynb  1_Cheat_at_Search_with_LLMs_Synonyms_from_LLMs.ipynb  README.md  (+14 more)
